syntax = "proto3";

package sum;

option java_package = "com.proto.sum";
option java_multiple_files = true;

message SumValue {
    string first_name = 1;
    string last_name = 2;
}

message SumRequest {
    SumValue sum_value = 1;
}

message SumResponse {
    string result = 1;
}

service SumService {
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};
}